Fix alignment of main page sidebar

--- a/03_02/style-main.css
+++ b/03_02/style-main.css
@@ -318,3 +318,13 @@ CSS Grid layout for modern browsers:
 
 	}
 }
+
+@media screen and (min-width:65em) { 
+
+	.site {grid-template-columns: 15em auto 15em;}
+
+	.sidebar {grid-column: 3/4; grid-row: 1/3;}
+
+	.colophon { grid-column: 1/4;}
+	
+}
